--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 
 </head>
 <body>
+    <div class="top-banner">
+        <img src="/public/PISS_CROWNS_ARE_TREBLED.png" alt="Top banner">
+    </div>
+    
     <div class="vertical-banner left">
         <img src="/public/wife.png" alt="Left banner">
     </div>
