--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-config" content="/public/browserconfig.xml">
     <link rel="stylesheet" href="/public/css/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&display=swap" rel="stylesheet">
     
     <title>Cansu's Wonderland</title>
 
@@ -32,7 +35,7 @@
     
     <div class="radio-player">
         <div class="cover-art" id="coverArt">
-            <img id="coverImage" alt="Album cover">
+            <img id="coverImage" alt="Album cover" src="/public/cheee.jpg" class="loaded">
         </div>
         <div class="track-details">
             <div class="track-title" id="trackTitle"><span class="track-title-wrapper">woagh... girls are... kissing?</span></div>
