--- a/index.html
+++ b/index.html
@@ -33,20 +33,12 @@
         <img src="/public/wife_2.jpg" alt="Right banner">
     </div>
     
-    <div class="radio-player">
-        <div class="cover-art" id="coverArt">
-            <img id="coverImage" alt="Album cover" src="/public/cheee.jpg" class="loaded">
+    <div class="player-container">
+        <div class="player-embed">
+            <iframe src="https://radio.cansu.dev/public/wonderhoy/embed?layout=large" frameborder="0" allowtransparency="true" style="width: 100%; height: 150px; border: 0;"></iframe>
         </div>
-        <div class="track-details">
-            <div class="track-title" id="trackTitle"><span class="track-title-wrapper">woagh... girls are... kissing?</span></div>
-            <div class="track-artist" id="trackArtist">focus, m.</div>
-        </div>
-        <div class="player-controls">
-            <audio id="player" controls preload="none" playsinline>
-                <source src="https://radio.cansu.dev/beep" type="audio/mpeg">
-                <source src="https://radio.cansu.dev/beep" type="audio/ogg">
-                Your browser does not support the audio element.
-            </audio>
+        <div class="history-embed">
+            <iframe src="https://radio.cansu.dev/public/wonderhoy/history" frameborder="0" allowtransparency="true" style="width: 100%; height: 300px; border: 0;"></iframe>
         </div>
     </div>
 
