--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     
     <div class="player-container">
         <div class="player-embed">
-            <iframe src="https://radio.cansu.dev/public/wonderhoy/embed?layout=large" frameborder="0" allowtransparency="true" style="width: 100%; height: 150px; border: 0;"></iframe>
+            <iframe src="https://radio.cansu.dev/public/wonderhoy/embed" frameborder="0" allowtransparency="true" style="width: 100%; min-height: 120px; height: 120px; border: 0;"></iframe>
         </div>
         <div class="history-toggle" id="historyToggle">
             <button type="button" id="historyToggleButton">
