--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
     
     <div class="player-container">
         <div class="player-embed">
+            <button type="button" id="historyToggleButton" class="history-icon-button" aria-label="Toggle playing history">
+                <img src="/public/icons/clock-counter-clockwise.svg" alt="History" class="history-icon">
+            </button>
             <iframe src="https://radio.cansu.dev/public/wonderhoy/embed" frameborder="0" allowtransparency="true" style="width: 100%; min-height: 120px; height: 120px; border: 0;"></iframe>
         </div>
-        <div class="history-toggle" id="historyToggle">
-            <button type="button" id="historyToggleButton">
-                <span id="historyToggleText">Show</span> Playing History
-            </button>
-        </div>
-        <div class="history-embed collapsed" id="historyEmbed">
-            <iframe src="https://radio.cansu.dev/public/wonderhoy/history" frameborder="0" allowtransparency="true" style="width: 100%; height: 300px; border: 0;"></iframe>
+        <div class="history-popover" id="historyPopover" style="display: none;">
+            <div class="history-embed">
+                <iframe src="https://radio.cansu.dev/public/wonderhoy/history" frameborder="0" allowtransparency="true" style="width: 100%; height: 300px; border: 0;"></iframe>
+            </div>
         </div>
     </div>
 
@@ -68,6 +68,10 @@
         </div>
     </div>
 
+    <script type="module">
+        import { computePosition, flip, shift, offset } from 'https://cdn.jsdelivr.net/npm/@floating-ui/dom@1.7.4/+esm';
+        window.FloatingUI = { computePosition, flip, shift, offset };
+    </script>
     <script type="module" src="/dist/main.js"></script>
 </body>
 </html>
