--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&display=swap" rel="stylesheet">
-    
+    <script src="https://cdn.jsdelivr.net/npm/@floating-ui/core@1.7.3"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@floating-ui/dom@1.7.4"></script>
     <title>Cansu's Wonderland</title>
 
 </head>
@@ -67,11 +68,6 @@
         <div class="recording-info-content" id="recordingInfoContent">
         </div>
     </div>
-
-    <script type="module">
-        import { computePosition, flip, shift, offset } from 'https://cdn.jsdelivr.net/npm/@floating-ui/dom@1.7.4/+esm';
-        window.FloatingUI = { computePosition, flip, shift, offset };
-    </script>
     <script type="module" src="/dist/main.js"></script>
 </body>
 </html>
