--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
     
     <div class="player-container">
         <div class="player-embed">
+            <button type="button" id="infoToggleButton" class="info-icon-button" aria-label="Toggle recording info">
+                <img src="/public/icons/info.svg" alt="Info" class="info-icon">
+            </button>
             <button type="button" id="queueToggleButton" class="queue-icon-button" aria-label="Toggle queue">
                 <img src="/public/icons/queue.svg" alt="Queue" class="queue-icon">
             </button>
@@ -44,6 +47,11 @@
                 <img src="/public/icons/clock-counter-clockwise.svg" alt="History" class="history-icon">
             </button>
             <iframe src="https://radio.cansu.dev/public/wonderhoy/embed" frameborder="0" allowtransparency="true" style="width: 100%; min-height: 120px; height: 120px; border: 0;"></iframe>
+        </div>
+        <div class="info-popover" id="infoPopover" style="display: none;">
+            <div class="info-content" id="infoContent">
+                <div class="loading">No recording information available</div>
+            </div>
         </div>
         <div class="queue-popover" id="queuePopover" style="display: none;">
             <div class="queue-content" id="queueContent">
@@ -68,15 +76,14 @@
     <div class="gallery-controls">
         <label>
             <input type="checkbox" id="autoFetchToggle" checked>
-            Auto-refresh gallery
+            Auto-download new yuri
         </label>
     </div>
 
-    <div class="recording-info" id="recordingInfo">
-        <div class="recording-info-title">Recording Information</div>
-        <div class="recording-info-content" id="recordingInfoContent">
-        </div>
+    <div class="atabook-embed">
+        <iframe src="https://cansu.atabook.org/" frameborder="0" allowtransparency="true" style="width: 100%; height: 600px; border: 0;"></iframe>
     </div>
+    
     <script type="module" src="/dist/main.js"></script>
 </body>
 </html>
